--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
     "build-js": "react-scripts build",
-    "build": "rm -rf static/* && npm-run-all build-css build-js && cp -r build/* .",
+    "build": "rm -rf static/* && npm-run-all build-css build-js && cp -r build/* . && rm service-worker.js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
